minor plotting changes

--- a/sleepstudy_pymc.ipynb
+++ b/sleepstudy_pymc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5d8ddd07",
+   "id": "e32f27a7",
    "metadata": {},
    "source": [
     "## SleepStudy Multilevel Models using pymc\n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c6d0dd69",
+   "id": "429c8a1c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f4058e55",
+   "id": "30357e6c",
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8e69d3d3",
+   "id": "b49964e8",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48fcfead",
+   "id": "9fe3957c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0e8b407f",
+   "id": "d6436c97",
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "8669dcdc",
+   "id": "f0d94fa1",
    "metadata": {},
    "outputs": [
     {
@@ -326,13 +326,13 @@
    "source": [
     "#Couldnt figure out how to implement bambis predict function to return \n",
     "#draws from the posterior distribution of the mean\n",
-    "g = plot_linear_regression(sleepstudy, fit_sleep1, 'Days', 'Reaction', add_hdi=False)"
+    "g = plot_linear_regression(sleepstudy, fit_sleep1, 'Days', 'Reaction', add_ppm=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "62254bdc",
+   "id": "824778ed",
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "703a46e3",
+   "id": "3fe0a73f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "e37d8e28",
+   "id": "179466d4",
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "1b49f3e1",
+   "id": "2a6569c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +526,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "36292134",
+   "id": "a4d70b05",
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "3e8c6c0f",
+   "id": "a1681f34",
    "metadata": {},
    "outputs": [
     {
@@ -859,7 +859,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "7de81c3c",
+   "id": "dc2ac556",
    "metadata": {},
    "outputs": [
     {
@@ -987,7 +987,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "a9bbf615",
+   "id": "9ff94a37",
    "metadata": {},
    "outputs": [
     {
@@ -1621,7 +1621,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "7c18f234",
+   "id": "77055798",
    "metadata": {},
    "outputs": [
     {
@@ -1642,7 +1642,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "9868e631",
+   "id": "81ff8ee1",
    "metadata": {},
    "outputs": [
     {
@@ -1681,7 +1681,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "6570d1df",
+   "id": "f69c4413",
    "metadata": {},
    "outputs": [
     {
@@ -1803,7 +1803,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "acd54784",
+   "id": "0e90561f",
    "metadata": {},
    "outputs": [
     {
@@ -1824,7 +1824,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7af8158",
+   "id": "b8bb0787",
    "metadata": {},
    "outputs": [],
    "source": []
